packages/core/nros-platform-cffi/src/generated.rs

//! AUTO-GENERATED by scripts/gen-abi-bindings.sh (bindgen 0.72.1) — DO NOT EDIT.
//!
//! Source of truth: `packages/core/nros-platform-api/include/nros/platform*.h` (RFC-0054).
//! Edit the headers, rerun the script, commit both.
#![allow(non_camel_case_types, non_snake_case, non_upper_case_globals)]
#![allow(unsafe_op_in_unsafe_fn, clippy::missing_safety_doc)]
/* automatically generated by rust-bindgen 0.72.1 */

pub type nros_platform_ret_t = i32;
pub type nros_platform_log_writer_fn_t = ::core::option::Option<
    unsafe extern "C" fn(
        severity: u8,
        name_ptr: *const u8,
        name_len: usize,
        msg_ptr: *const u8,
        msg_len: usize,
    ),
>;
pub type nros_platform_log_flush_fn_t = ::core::option::Option<unsafe extern "C" fn()>;
#[doc = " @file platform_timer.h\n @brief Canonical C ABI for the nros platform timer surface.\n\n Companion to `<nros/platform.h>`; sits beside the core 39-symbol\n ABI as the Phase 110.E platform-timer interface. Carved into a\n separate header because bare-metal / single-shot consumers can\n omit timer support without losing the canonical platform symbols.\n\n # Handle model\n\n  Platform timer handles are opaque `void *`. The implementation\n  allocates whatever it needs to track the underlying primitive\n  (`TimerHandle_t` on FreeRTOS, `TX_TIMER *` on ThreadX, `timer_t`\n  on POSIX, `*mut k_timer` on Zephyr); the runtime never inspects\n  the bytes pointed at.\n\n # Return-value conventions\n\n  - `create_periodic` / `create_oneshot` return non-NULL on success\n    and `NULL` on failure (analogous to libc `malloc`).\n  - `cancel` returns 1 when the cancellation prevented the callback\n    from firing, 0 if the callback already fired (or the timer was\n    already cancelled or destroyed), -1 on unrecoverable error.\n  - `destroy` is best-effort; idempotent on already-destroyed handles.\n\n # Threading / context\n\n  Callbacks are invoked from a platform-defined timer context — a\n  direct ISR on Zephyr / bare-metal, deferred to the FreeRTOS timer\n  task on FreeRTOS, a real-time signal on POSIX. Callback bodies\n  must be short, must not call back into nros_platform_* heap or\n  blocking primitives, and must use atomic operations for shared\n  state. `user_data` must outlive the timer handle."]
pub type nros_platform_timer_callback_t =
    ::core::option::Option<unsafe extern "C" fn(user_data: *mut core::ffi::c_void)>;
unsafe extern "C" {
    #[doc = " Monotonic milliseconds since a platform-defined epoch (boot, program\n  start, …). Never decreases. Wraps after ~584 million years."]
    pub fn nros_platform_clock_ms() -> u64;
}
unsafe extern "C" {
    #[doc = " Monotonic microseconds since the same epoch as `nros_platform_clock_ms`.\n  Used for fine-grained spin / wait deadlines."]
    pub fn nros_platform_clock_us() -> u64;
}
unsafe extern "C" {
    #[doc = " Allocate `size` bytes; return `NULL` on failure. May be called from\n  any thread."]
    pub fn nros_platform_alloc(size: usize) -> *mut core::ffi::c_void;
}
unsafe extern "C" {
    #[doc = " Resize the block at `ptr` to `size` bytes. Equivalent to libc\n  `realloc`: `NULL` ptr → fresh alloc; `0` size → free + return `NULL`.\n  Preserves contents up to `min(old, new)`."]
    pub fn nros_platform_realloc(
        ptr: *mut core::ffi::c_void,
        size: usize,
    ) -> *mut core::ffi::c_void;
}
unsafe extern "C" {
    #[doc = " Free a previously allocated block. `NULL` is a no-op."]
    pub fn nros_platform_dealloc(ptr: *mut core::ffi::c_void);
}
unsafe extern "C" {
    #[doc = " Bytes currently allocated from the platform heap, or `0` if the port\n  does not instrument it. Phase 230 / RFC-0034 D7: the true unified figure\n  where the platform owns one kernel heap shared by the C side and the\n  Rust `#[global_allocator]`."]
    pub fn nros_platform_heap_used_bytes() -> usize;
}
unsafe extern "C" {
    #[doc = " Total managed heap size in bytes (used + free), or `0` if unknown."]
    pub fn nros_platform_heap_total_bytes() -> usize;
}
unsafe extern "C" {
    #[doc = " Sleep at least `us` microseconds. Spin if the platform clock has no\n  sub-millisecond timer."]
    pub fn nros_platform_sleep_us(us: usize);
}
unsafe extern "C" {
    #[doc = " Sleep at least `ms` milliseconds."]
    pub fn nros_platform_sleep_ms(ms: usize);
}
unsafe extern "C" {
    #[doc = " Sleep at least `s` seconds."]
    pub fn nros_platform_sleep_s(s: usize);
}
unsafe extern "C" {
    #[doc = " Voluntarily yield the current task / thread. On bare-metal,\n  `core::hint::spin_loop()` is acceptable; on RTOSes use the native\n  cooperative-yield primitive (`k_yield`, `vPortYield`,\n  `tx_thread_relinquish`, `sched_yield`, …). RTOS yields are **not**\n  ISR-safe."]
    pub fn nros_platform_yield_now();
}
unsafe extern "C" {
    #[doc = " Random `u8`. Cryptographically random where the platform has an\n  entropy source; otherwise a seeded PRNG. Must be deterministic\n  within a single test session for reproducibility."]
    pub fn nros_platform_random_u8() -> u8;
}
unsafe extern "C" {
    #[doc = " Random `u16`. See `random_u8` notes."]
    pub fn nros_platform_random_u16() -> u16;
}
unsafe extern "C" {
    #[doc = " Random `u32`. See `random_u8` notes."]
    pub fn nros_platform_random_u32() -> u32;
}
unsafe extern "C" {
    #[doc = " Random `u64`. See `random_u8` notes."]
    pub fn nros_platform_random_u64() -> u64;
}
unsafe extern "C" {
    #[doc = " Fill `len` bytes at `buf` with random data."]
    pub fn nros_platform_random_fill(buf: *mut core::ffi::c_void, len: usize);
}
unsafe extern "C" {
    #[doc = " Wall-clock milliseconds since the Unix epoch, or `0` if the platform\n  has no real-time clock."]
    pub fn nros_platform_time_now_ms() -> u64;
}
unsafe extern "C" {
    #[doc = " Whole seconds since the Unix epoch (truncated `time_now_ms`)."]
    pub fn nros_platform_time_since_epoch_secs() -> u32;
}
unsafe extern "C" {
    #[doc = " Sub-second nanosecond component of the wall clock (`0..1e9`)."]
    pub fn nros_platform_time_since_epoch_nanos() -> u32;
}
unsafe extern "C" {
    #[doc = " Spawn a new task. `task` is opaque caller-provided storage (size\n  determined by the implementor); `attr` carries scheduling hints\n  (priority, stack size, …) or is `NULL` for defaults; `entry` is the\n  task entry point; `arg` is forwarded to `entry`. Returns `0` on\n  success, non-zero on failure."]
    pub fn nros_platform_task_init(
        task: *mut core::ffi::c_void,
        attr: *mut core::ffi::c_void,
        entry: ::core::option::Option<
            unsafe extern "C" fn(arg1: *mut core::ffi::c_void) -> *mut core::ffi::c_void,
        >,
        arg: *mut core::ffi::c_void,
    ) -> i8;
}
unsafe extern "C" {
    #[doc = " Block until `task` exits. Cleans up task storage on success."]
    pub fn nros_platform_task_join(task: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    #[doc = " Mark `task` as detached — its storage is reclaimed on exit without\n  a join."]
    pub fn nros_platform_task_detach(task: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    #[doc = " Request `task` to terminate at the next cancellation point.\n  Cooperative: a task that never reaches a cancel point will not stop."]
    pub fn nros_platform_task_cancel(task: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    #[doc = " Terminate the calling task immediately. Does not return."]
    pub fn nros_platform_task_exit();
}
unsafe extern "C" {
    #[doc = " Free task storage allocated by `task_init`. Called after `task_join`\n  or `task_detach + exit`."]
    pub fn nros_platform_task_free(task: *mut *mut core::ffi::c_void);
}
unsafe extern "C" {
    pub fn nros_platform_mutex_init(m: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    pub fn nros_platform_mutex_drop(m: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    pub fn nros_platform_mutex_lock(m: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    pub fn nros_platform_mutex_try_lock(m: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    pub fn nros_platform_mutex_unlock(m: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    #[doc = " Initialise a recursive mutex (same-thread re-entry permitted).\n  Required by zenoh-pico."]
    pub fn nros_platform_mutex_rec_init(m: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    pub fn nros_platform_mutex_rec_drop(m: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    pub fn nros_platform_mutex_rec_lock(m: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    pub fn nros_platform_mutex_rec_try_lock(m: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    pub fn nros_platform_mutex_rec_unlock(m: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    pub fn nros_platform_condvar_init(cv: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    pub fn nros_platform_condvar_drop(cv: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    pub fn nros_platform_condvar_signal(cv: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    pub fn nros_platform_condvar_signal_all(cv: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    #[doc = " Phase 124.B.7.a — ISR-safe signal.\n\n  Callable from interrupt context. `nros_platform_condvar_signal`\n  is NOT ISR-safe on every platform (POSIX `pthread_cond_signal`\n  isn't on the async-signal-safe function list; RTOS condvar\n  primitives often require thread context). Backends MUST use\n  this variant when triggering from an ISR or POSIX signal handler.\n\n  Per-platform implementation:\n  * POSIX: `eventfd`/`pipe` write — async-signal-safe; a runtime\n    worker thread forwards to the underlying condvar.\n  * Zephyr: `k_sem_give` on the wake semaphore (ISR-safe).\n  * FreeRTOS: `xSemaphoreGiveFromISR` + `portYIELD_FROM_ISR` on\n    the wake semaphore.\n  * NuttX: `sem_post` (POSIX-safe under NuttX) on the wake sem.\n  * ThreadX: `tx_event_flags_set` on the wake event flag group\n    (ISR-safe).\n  * Bare-metal: atomic flag store + `__SEV()` (Cortex-M).\n\n  Returns non-zero on error (e.g. ISR-unsafe call on a backend\n  that mandates ISR-context-only via a separate primitive).\n  Backends without an ISR-safe path return non-zero so callers\n  can fall back to thread-context signal (with the obvious\n  latency cost)."]
    pub fn nros_platform_condvar_signal_from_isr(cv: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    #[doc = " Atomically release `m` and block on `cv`. The mutex is re-acquired\n  before this function returns."]
    pub fn nros_platform_condvar_wait(cv: *mut core::ffi::c_void, m: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    #[doc = " Like `condvar_wait`, but with an absolute monotonic deadline (in\n  `clock_ms` units). Returns non-zero on timeout."]
    pub fn nros_platform_condvar_wait_until(
        cv: *mut core::ffi::c_void,
        m: *mut core::ffi::c_void,
        abstime: u64,
    ) -> i8;
}
unsafe extern "C" {
    pub fn nros_platform_wake_init(w: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    pub fn nros_platform_wake_drop(w: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    pub fn nros_platform_wake_wait_ms(w: *mut core::ffi::c_void, timeout_ms: u32) -> i8;
}
unsafe extern "C" {
    pub fn nros_platform_wake_signal(w: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    pub fn nros_platform_wake_signal_from_isr(w: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    #[doc = " Opaque-storage sizing. Both helpers are pure functions (no global\n  state) and may be called before `nros_platform_wake_init`."]
    pub fn nros_platform_wake_storage_size() -> usize;
}
unsafe extern "C" {
    pub fn nros_platform_wake_storage_align() -> usize;
}
unsafe extern "C" {
    pub fn nros_platform_critical_section_acquire() -> u32;
}
unsafe extern "C" {
    pub fn nros_platform_critical_section_release(token: u32);
}
